# hello-world-neural-network

./: .gitignore  Makefile  pyproject.toml
conf/experiments/: relu_128_128_128_normalized_lr_01_5k.yaml  relu_128_128_128_normalized_minibatch_bs128_lr_001_l2_50_momentum_095_100e.yaml  relu_128_128_128_normalized_minibatch_bs128_lr_0025_l2_50_momentum_09_100e.yaml  relu_128_128_128_normalized_minibatch_bs128_lr_002_l2_50_momentum_09_100e.yaml  relu_128_128_128_normalized_minibatch_bs128_lr_0035_l2_50_momentum_09_100e.yaml  relu_128_128_128_normalized_minibatch_bs128_lr_003_l2_50_momentum_09_100e.yaml  relu_128_128_128_normalized_minibatch_bs128_lr_0045_l2_50_momentum_08_100e.yaml  relu_128_128_128_normalized_minibatch_bs128_lr_004_l2_50_momentum_08_100e.yaml  relu_128_128_128_normalized_minibatch_bs128_lr_004_l2_50_momentum_09_100e.yaml  relu_128_128_128_normalized_minibatch_bs128_lr_005_20e.yaml  relu_128_128_128_normalized_minibatch_bs128_lr_005_l2_50_momentum_08_100e.yaml  relu_128_128_128_normalized_minibatch_bs128_lr_01_100e.yaml  relu_128_128_128_normalized_minibatch_bs128_lr_01_20e.yaml  relu_128_128_128_normalized_minibatch_bs128_lr_01_l2_50_100e.yaml  relu_128_128_128_normalized_minibatch_bs128_lr_02_100e.yaml  relu_128_128_128_normalized_minibatch_bs128_lr_02_l2_100_100e.yaml  relu_128_128_128_normalized_minibatch_bs128_lr_02_l2_10_100e.yaml  relu_128_128_128_normalized_minibatch_bs128_lr_02_l2_25_100e.yaml  relu_128_128_128_normalized_minibatch_bs256_lr_005_20e.yaml  (+24 more)
dashboard/: eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
(+125 files in other folders)
